--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,11 @@ header {
     background-color: #F91660;
     border: 0px;
     border-radius: 25px;
-    padding: 0.4rem 1rem;
+    padding: 0.5rem 1.25rem;
+}
+
+.button:hover {
+    background-color: #C71E56;
 }
 
 h1 {
@@ -93,14 +97,48 @@ nav ul li a, .hamburger {
     font-size: 16px;
 }
 
+/** END HEADER **/
+
 footer {
     color: #fff;
     background-color: #C71E56;
     text-align: center;
     padding: 15px 12px 20px 12px;
+    line-height: 27px;
+}
+
+footer a {
+    color: #fff;
+}
+
+.footer-policy {
+    margin: 45px auto 0 auto;
+}
+
+.footer-logo {
+    width: 70px;
 }
 
 .social-media {
     text-align: end;
 }
 
+.logo-insta {
+    margin-right: 20px;
+}
+
+h4 {
+    font-family:'Dongle', sans-serif;
+    font-size: 26px;
+    font-weight: bold;
+    margin: 5px auto 10px auto;
+}
+
+.policy {
+    text-decoration: none;
+}
+
+.copyright {
+    font-size: 10px;
+    margin-top: 45px;
+}
