--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,10 @@ header {
     margin: 0 auto;
 }
 
+.h1-header {
+    padding-top: 0;
+}
+
 .button {
     text-transform: uppercase;
     font-weight: bold;
@@ -19,7 +23,7 @@ header {
     background-color: #F91660;
     border: 0px;
     border-radius: 25px;
-    padding: 0.5rem 1.25rem;
+    padding: 0.25rem 1.25rem;
 }
 
 .button:hover {
@@ -30,6 +34,7 @@ h1 {
     font-size: 32px;
     font-family: 'Orelega One', cursive;
     color: #C71E56;
+    padding-top: 15px;
     padding-bottom: 8px;
     text-align: center;
 }
@@ -104,6 +109,17 @@ h2 {
     font-family: 'Dongle', sans-serif;
     font-weight: bold;
     color: #C71E56;
+    font-size: 30px;
+    line-height: 20px;
+}
+
+.big-h2 {
+    font-size: 35px;
+    padding-top: 5%;
+}
+
+.h2-community {
+    padding-top: 30%;
 }
 
 .about-container {
@@ -135,6 +151,24 @@ h2 {
 .rnp-img, .community-img {
     line-height: 0;
 }
+
+.section-img {
+    width: 100%;
+}
+
+.community-txt, .rnp-txt {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 15px;
+    text-align: center;
+}
+
+.smaller-b {
+    font-size: 11px;
+    align-self: flex-end;
+}
+
 
 /** END MAIN **/
 
@@ -182,6 +216,6 @@ h4 {
     margin-top: 45px;
 }
 
-/**@media screen (min-width:600px) {
+/**@media screen and (min-width:481px) {
     
 }**/
