--- a/css/styles.css
+++ b/css/styles.css
@@ -200,7 +200,7 @@ label {
 input {
     margin: 3px 0 8px 0;
     border-radius: 25px;
-    border: 1px solid #C71E56;
+    border: 1.5px solid #C71E56;
 }
 
 .full {
@@ -211,6 +211,7 @@ input {
     margin-bottom: 15px;
     height: 135px;
     width: 100%;
+    border-radius: 15px;
 }
 
 form .button {
